--- a/styles.css
+++ b/styles.css
@@ -84,6 +84,28 @@ border-radius: 1rem;
 .img-container{
     background-image: url(Images/Rectangle\ 4.png);
 }
+.search-container{
+
+    display: flex;
+
+    border-radius: 8px;
+    position: relative;
+    width: 175px;
+    height: 50px;
+    gap: 24px;
+    margin: 1rem;
+    padding: 5px;
+}
+
+#find-now{
+
+
+    background-color:  #FF5400;
+    width: 100%;
+    height: 50px;
+    text-decoration: #FFF;
+   
+
 /* tour style start */
 .tour-description{
     max-width: 1170px;
