--- a/styles.css
+++ b/styles.css
@@ -149,13 +149,7 @@ border-radius: 1rem;
     max-width: 1170px;
     margin: 0 auto;
 }
-.destination-title{
-    text-align: center;
 
-    justify-content: center;
-   
-    argin-top: 40px;
-}
 
 .img-container{
     max-width: 1170px;
@@ -199,4 +193,9 @@ border-radius: 1rem;
         grid-template-columns: repeat(1, 1fr);
     
         gap: 10px;
+}
+.choose-destination{
+    flex-direction: column;
+    width: 100%;
+}
 }
